--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -12,6 +12,20 @@
   box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.1);
   z-index: 999999;
 
+  .mobile-icon {
+    display: inline-block;
+    position: absolute;
+    top: 6px;
+    background-image: url(../images/logo.png);
+    background-size: cover;
+    width: 35px;
+    height: 35px;
+
+    @include min-screen($small-screen) {
+      display: none;
+    }
+  }
+
   ul {
     float: right;
     padding: 6px 0px;
