refactor(menu): move underneath menu
* Menu no longer pushes the page over by using transitions
* Scrollbars now always in correct spot

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -3,6 +3,7 @@
 @import "./header";
 @import "./media-queries";
 @import "./home";
+@import "./menu";
 
 @font-face {
 	font-family: 'icomoon';
@@ -539,7 +540,6 @@ blockquote {
 html, body {
   font-size: 100%;
   height: 100%;
-  background-color: rgb(40, 49, 60);
 }
 
 h2 {
@@ -591,100 +591,22 @@ img {
     -webkit-appearance: scrollbartrack-vertical;
 }
 
-.menu {
-  color: #EAEAEA;
-  width: 200px;
-  height: 100%;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-}
-
-.submenu {
-  color: #EAEAEA;
-}
-
-.submenu > li {
-  height: 25px;
-  padding: 5px 0 5px 10px;
-  cursor: pointer;
-  line-height: 25px;
-  font-size: 16px;
-  color: rgb(150, 155, 160);
-  margin: 0;
-}
-
-.menu > li {
-  min-height: 30px;
-  padding: 5px;
-  cursor: pointer;
-  line-height: 30px;
-  font-size: 18px;
-  color: rgb(150, 155, 160);
-  margin: 0;
-}
-
-.menu > li .icon {
-  color: rgb(150, 155, 160);
-}
-
-.menu li:hover {
-  color: rgb(90, 100, 110);
-}
-
-.menu li.active {
-  background-color: rgb(232, 137, 102);
-  font-size: 18px;
-  color: #EAEAEA;
-	font-weight: bold;
-}
-
-.menu li.active.head {
-  background-color: rgb(90, 100, 110);
-	font-weight: normal;
-}
-
-.menu li.active i {
-  color: #EAEAEA;
-}
-
-.submenu li.active i {
-  color: rgb(150, 155, 160);
-}
-
-.submenu li.active {
-  background-color: transparent;
-  font-size: 16px;
-  color: rgb(232, 137, 102);
-}
-
 .page {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+  position: relative;
   height: 100%;
-  transform: translate3d(200px, 0, 0);
-  -webkit-transform: translate3d(200px, 0, 0);
-  background-color: rgb(244, 244, 244);
-  transition: transform 0.2s ease-in-out;
-  -webkit-transition: -webkit-transform 0.2s ease-in-out;
-  box-shadow: -2px 0 4px 5px rgba(0, 0, 0, 0.1);
+
+  .content {
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    overflow-y: auto;
+    padding: 30px 0;
+  }
 }
 
 .center {
   text-align: center;
-}
-
-.content {
-  padding: 60px 40px 40px 40px;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-  height: 100%;
-  box-sizing: border-box;
-}
-
-.content-wrapper {
-  max-width: 1280px;
 }
 
 .icon {
@@ -817,5 +739,23 @@ img {
 @media (min-width: 680px) {
   .main-logo {
     display: inline-block;
+  }
+}
+
+.page-container {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  @include min-screen($small-screen) {
+    left: 0px;
+    @include transition(all 0.3s ease-out);
+
+    &.menu-open {
+      left: 200px;
+    }
+
   }
 }
