--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -1,1 +1,9 @@
 $small-screen: 635px;
+
+@mixin transition($args...) {
+  -webkit-transition: $args;
+  -moz-transition: $args;
+  -ms-transition: $args;
+  -o-transition: $args;
+  transition: $args;
+}
