Fixed pointing to logo image

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -14,7 +14,7 @@
     display: inline-block;
     position: absolute;
     top: 6px;
-    background-image: url(../images/logo.png);
+    background-image: url(/logo.png);
     background-size: cover;
     width: 35px;
     height: 35px;
