--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -2,18 +2,48 @@
 
 #home {
   h1 {
-    @include min-screen($small-screen) {
-      text-align: center;
-    }
+    text-align: center;
   }
 
   .main-logo {
-    /* background-image: url(../images/logo.png); */
-    /* background-size: cover; */
+    height: 150px;
     width: 100%;
-    height: 100%;
-    /* min-height: 134px; */
-    /* height: 200px; */
-    /* width: 200px; */
+    position: relative;
+
+    img {
+      height: 100%;
+      position: absolute;
+      margin: auto;
+      left: 0;
+      right: 0;
+    }
+  }
+
+  .headstyle {
+    border-bottom: 2px solid rgb(232,232,232);
+    text-align: center;
+    padding: 0 20px;
+
+    h6 {
+      position: relative;
+      padding: 0 10px 5px 10px;
+      top: 2;
+      margin: 0 auto;
+      border-bottom: 2px solid rgb(183,183,183);
+      display: inline-block;
+    }
+  }
+
+  section {
+    margin-top: 20px;
+
+    &.packages {
+      .columns {
+
+        @include max-screen(550px) {
+          width: auto;
+        }
+      }
+    }
   }
 }
