--- a/app/components/App/styles.css
+++ b/app/components/App/styles.css
@@ -4,6 +4,7 @@ body {
 
 .wrapper {
   display: flex;
+  flex-direction: column;
   font-family: 'Roboto', sans-serif;
   align-items: center;
   justify-content: center;
