--- a/app/prism.scss
+++ b/app/prism.scss
@@ -90,7 +90,7 @@ pre[class*="language-"] {
 }
 
 .token.punctuation {
-	color: #999;
+	color: #FFF;
 }
 
 .namespace {
@@ -113,7 +113,7 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-	color: #8BC34A;
+	color: #AED581;
 }
 
 .token.operator,
@@ -127,11 +127,11 @@ pre[class*="language-"] {
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-	color: #00A1C9;
+	color: #38C4E3;
 }
 
 .token.function {
-	color: #E0487B;
+	color: #F27596;
 }
 
 .token.regex,
