--- a/app/base/Header/styles.css
+++ b/app/base/Header/styles.css
@@ -1,3 +1,7 @@
+.center {
+  text-align: center;
+}
+
 .header1, h1 {
   font-size: 72px;
   line-height: 82px;
@@ -10,4 +14,25 @@
   line-height: 56px;
   font-weight: 600;
   color: #00A1C9;
+}
+
+.header2, h2 {
+  font-size: 48px;
+  line-height: 56px;
+  font-weight: 600;
+  color: #00A1C9;
+}
+
+.header3, h3 {
+  font-size: 32px;
+  line-height: 40px;
+  font-weight: 500;
+  color: #00A1C9;
+}
+
+.header4, h4 {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 600;
+  color: #223338;
 }
