--- a/app/components/App/styles.css
+++ b/app/components/App/styles.css
@@ -3,7 +3,6 @@ body {
   background-color: #F2F9FA;
 }
 
-
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -21,6 +20,10 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.mainHeader img {
+  margin: 20px 0;
 }
 
 .title {
@@ -57,6 +60,29 @@ body {
 
 .content {
   margin: 0 auto;
-  min-width: 960px;
-  padding: 20px;
+  width: 960px;
+  padding: 40px;
+}
+
+.content img {
+  border: 2px solid #223338;
+  border-radius: 4px;
+    width: 100%;
+}
+
+.row {
+  display: flex;
+  padding: 40px 0;
+}
+
+.row > div {
+    flex: 0 0 50%;
+}
+
+.row > div:first-child {
+  margin-right: 10px;
+}
+
+.row > div:last-child {
+  margin-left: 10px;
 }
