--- a/app/components/Tabs/styles.css
+++ b/app/components/Tabs/styles.css
@@ -8,14 +8,15 @@
   padding: 10px 20px;
   border-radius: 5px;
   background-color: #C5DBE0;
-  color: #FFF;
   margin: 0 5px;
   cursor: pointer;
   font-size: 18px;
   line-height: 28px;
   font-weight: 400;
+  color: #223338;
 }
 
 .activeTab {
   background-color: #38C4E3;
+  color: #FFF;
 }
