--- a/app/prism.scss
+++ b/app/prism.scss
@@ -104,7 +104,7 @@ pre[class*="language-"] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-	color: #905;
+	color: #38C4E3;
 }
 
 .token.selector,
