--- a/app/components/App/styles.css
+++ b/app/components/App/styles.css
@@ -13,83 +13,48 @@ body {
   color: #223338;
 }
 
-.mainHeader {
-  display: flex;
-  background-color: #00A1C9;
-  height: 75vh;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+h1 {
+  font-size: 72px;
+  line-height: 82px;
+  font-weight: 600;
+  color: #00A1C9;
+  margin: 0;
 }
 
-.mainHeader img {
-  margin: 20px 0;
-}
-
-.title {
+h2 {
   font-size: 48px;
   line-height: 56px;
   font-weight: 600;
-  color: #92DFF0;
+  color: #00A1C9;
+  margin: 0;
 }
 
-.subTitle {
+h3 {
+  font-size: 32px;
+  line-height: 40px;
+  font-weight: 500;
+  color: #00A1C9;
+}
+
+h4 {
   font-size: 24px;
   line-height: 32px;
   font-weight: 600;
+  color: #223338;
+  margin: 0;
+}
+
+code {
+  padding: 8px 16px;
+  font-family: 'Roboto Mono', Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  font-size: 14px;
   color: #FFF;
-}
-
-.buttonContainer {
-  display: flex;
-  flex-direction: row;
-  padding: 20px;
-}
-
-.button {
-  padding: 10px 20px;
-  border-radius: 5px;
-  background-color: #007299;
-  color: #FFF;
-  margin: 0 5px;
-  cursor: pointer;
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 400;
-}
-
-.content {
-  margin: 0 auto;
-  width: 960px;
-  padding: 40px;
-}
-
-.content img {
-  border: 2px solid #223338;
+  line-height: 24px;
+  background: #223338;
   border-radius: 4px;
-  width: 100%;
 }
 
-.content p {
-  text-align: justify;
-}
-
-.row {
-  display: flex;
-  padding: 40px 0;
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 500;
-}
-
-.row > div {
-    flex: 0 0 50%;
-}
-
-.row > div:first-child {
-  margin-right: 40px;
-}
-
-.row > div:last-child {
-  margin-left: 40px;
+a {
+  color: #00A1C9;
+  text-decoration: none;
 }
