--- a/app/prism.scss
+++ b/app/prism.scss
@@ -19,6 +19,7 @@ pre[class*="language-"] {
 	word-spacing: normal;
 	word-break: normal;
 	word-wrap: normal;
+	padding: 0;
 	border: 0;
 
 	-moz-tab-size: 4;
