--- a/app/components/Tabs/styles.css
+++ b/app/components/Tabs/styles.css
@@ -5,18 +5,18 @@
 
 .tab {
   flex: 0 1 auto;
-  padding: 10px 20px;
-  border-radius: 5px;
+  padding: 0px 16px;
+  border-radius: 4px;
   background-color: #C5DBE0;
-  margin: 0 5px;
+  margin-right: 8px;
   cursor: pointer;
-  font-size: 18px;
-  line-height: 28px;
+  font-size: 14px;
+  line-height: 36px;
   font-weight: 400;
   color: #223338;
 }
 
 .activeTab {
-  background-color: #38C4E3;
+  background-color: #00A1C9;
   color: #FFF;
 }
