--- a/app/components/NextDocument/styles.css
+++ b/app/components/NextDocument/styles.css
@@ -7,22 +7,35 @@
 }
 
 .nextWrapper {
-  flex: 0 1 300px;
+  flex: 0 1 auto;
+  min-width: 250px;
   background-color: #00A1C9;
-  border-radius: 15px;
-  padding: 16px;
+  border-radius: 4px;
+  padding: 8px 16px 8px 64px;
   cursor: pointer;
 }
 
 .next {
   color: #92DFF0;
   text-align: right;
+  line-height: 18px;
 }
 
 .doc {
   color: #FFF;
   font-size: 24px;
-  line-height: 32px;
-  font-weight: 500;
+  line-height: 28px;
+  font-weight: 400;
   text-align: right;
+}
+
+.contentWrapper {
+  display: flex;
+  color: #FFF;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.icon {
+  margin-left: 10px;
 }
