--- a/app/components/App/styles.css
+++ b/app/components/App/styles.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   background-color: #F2F9FA;
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .wrapper {
