Added bunch of stuff

--- a/app/prism.scss
+++ b/app/prism.scss
@@ -60,7 +60,7 @@ code[class*="language-"]::selection, code[class*="language-"] ::selection {
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 16px;
-	margin: .5em 0;
+	margin: 18px 0;
 	overflow: auto;
 	border-radius: 4px;
 }
