--- a/app/components/Front/styles.css
+++ b/app/components/Front/styles.css
@@ -85,7 +85,7 @@
 .references {
   background-color: #E1EDF0;
   text-align: center;
-  padding: 60px 40px;
+  padding: 60px 40px 0 40px;
   color: #779DA6;
   font-size: 18px;
   line-height: 28px;
@@ -101,6 +101,8 @@
   font-size: 24px;
   line-height: 32px;
   font-style: italic;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .quoteNameWrapper {
@@ -134,6 +136,8 @@
   margin-top: -10px;
 }
 
-.companies {
-  padding: 40px 40px 0 40px;
+.companies {}
+
+.companies img {
+  margin: 40px;
 }
